--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         #counters {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             grid-gap: 10px;
             padding: 20px;
             width: 100%;
@@ -46,6 +46,7 @@
             justify-items: center;
             box-sizing: border-box;
             margin: 0 auto;
+            justify-content: center; /* Horizontally center the grid items */
         }
 
         .counter-container {
@@ -207,6 +208,7 @@
                 grid-template-columns: repeat(5, 1fr);
                 grid-gap: 20px;
                 justify-items: center; /* 中央に配置 */
+                justify-content: center; /* Ensure the counters are centered in landscape mode */
             }
 
             .charts-section {
