--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>リアルタイムカウンター</title>
     <style>
         body {
@@ -54,11 +54,13 @@
             color: #333;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 25px;
+            padding: 2rem;
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             width: 100%;
+            max-width: 90vw; /* Relative max width for consistent scaling */
             box-sizing: border-box;
+            margin: 0 auto;
         }
 
         .dark-mode .counter-container {
@@ -204,7 +206,7 @@
         }
 
         @media (min-width: 769px) {
-            /* Landscape mode adjustments */
+            /* Styles for wider screens (tablets and desktops) */
             #counters {
                 grid-template-columns: repeat(5, 1fr);
                 grid-gap: 20px;
@@ -241,17 +243,17 @@
         }
 
         @media (max-width: 768px) {
-            /* Portrait mode adjustments */
+            /* Styles for smartphones */
             #counters {
                 grid-template-columns: repeat(2, 1fr); /* Two columns for portrait mode */
                 grid-gap: 15px;
-                padding: 10px;
+                padding: 1rem; /* Use relative padding */
                 width: 90%; /* Ensure consistent space on both sides */
             }
 
             .counter-container {
                 width: 100%;
-                padding: 20px;
+                padding: 1.5rem;
             }
 
             .charts-section {
