--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
                 grid-gap: 15px;
                 padding: 10px;
                 width: 90%; /* Ensure consistent space on both sides */
+                max-width: 400px; /* Limit width to create space */
+                margin: 0 auto;
             }
 
             .counter-container {
