--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            padding: 1rem;
+            padding: 2vw; /* ビューポート幅に基づいてスペースを設定 */
             box-sizing: border-box;
             transition: background-color 0.3s, color 0.3s;
         }
@@ -41,7 +41,7 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
-            width: 90%;
+            width: 100%;
             max-width: 900px;
             align-items: center;
             box-sizing: border-box;
@@ -51,8 +51,7 @@
         #counters {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-gap: 15px;
-            padding: 1rem;
+            grid-gap: 2vw; /* 一貫したスペースを確保 */
             width: 100%;
             max-width: 100%;
             justify-items: center;
@@ -66,7 +65,7 @@
             color: #333;
             border-radius: 10px;
             box-shadow: 0 4px 8px var(--box-shadow);
-            padding: 1.5rem;
+            padding: 2vw; /* コンテナサイズに比例したパディング */
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             width: 100%;
@@ -218,26 +217,26 @@
         @media (min-width: 769px) {
             /* Landscape mode adjustments */
             #counters {
-                grid-template-columns: repeat(5, 1fr);
-                grid-gap: 20px;
+                grid-template-columns: repeat(3, 1fr); /* 3列でグリッドを形成 */
+                grid-gap: 2vw;
                 justify-items: center;
                 justify-content: center;
             }
 
             .counter-container {
-                padding: 1.5rem;
+                padding: 2vw;
             }
 
             .counter-container h2, .count, .remaining, .amount {
-                font-size: 1.3rem;
+                font-size: 1.5rem; /* コンテナサイズに比例してフォントサイズを調整 */
             }
 
             .count {
-                font-size: 2.2rem;
+                font-size: 2rem;
             }
 
             button {
-                padding: 1rem 1.5rem;
+                padding: 1rem 2rem;
                 font-size: 1rem;
             }
 
@@ -255,15 +254,15 @@
         @media (max-width: 768px) {
             /* Portrait mode adjustments */
             #counters {
-                grid-template-columns: repeat(2, 1fr);
-                grid-gap: 15px;
-                padding: 10px;
-                width: 90%;
+                grid-template-columns: 1fr; /* 1列で表示 */
+                grid-gap: 2vw;
+                padding: 2vw;
+                width: 100%;
             }
 
             .counter-container {
                 width: 100%;
-                padding: 20px;
+                padding: 2vw;
             }
 
             .charts-section {
