--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         }
 
         button {
-            padding: calc(0.5em + 1vw) calc(1em + 1vw); /* 幅に応じてpadding調整 */
-            font-size: calc(1rem + 0.5vw); /* 幅に応じてfont-size調整 */
+            padding: calc(0.8rem + 0.5vw) calc(1rem + 0.5vw); /* 幅に応じてpadding調整 */
+            font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
             border: none;
             border-radius: 8px;
             background-color: var(--button-bg);
@@ -238,8 +238,8 @@
             }
 
             button {
-                padding: calc(0.5em + 1vw) calc(1em + 1vw); /* 幅に応じてpadding調整 */
-                font-size: calc(1rem + 0.5vw); /* 幅に応じてfont-size調整 */
+                padding: calc(0.8rem + 0.5vw) calc(1rem + 0.5vw); /* 幅に応じてpadding調整 */
+                font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
             }
 
             .charts-section {
